--- a/storage/themes/boulevard-b30686d9-3490-9abb-1049-fe419a211502/inc/header-index.html
+++ b/storage/themes/boulevard-b30686d9-3490-9abb-1049-fe419a211502/inc/header-index.html
@@ -29,7 +29,7 @@
 				<koken:link to="front" title="{{ labels.home.singular }}"><img src="{{ settings.site_title_img_url }}" alt="{{ site.title }}" class="custom_logo"></koken:link>
 			</koken:if>
 
-			<h2 class="tag"></h2>
+			<h2 class="tag">{{ site.tagline }}</h2>
 
 		</div>
 
